--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     //圆形头像
     compile 'com.pkmmte.view:circularimageview:1.1'
+    //okHttp
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
 }
