练习，Gson的使用01

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     //日志拦截器
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    //Gson
+    compile 'com.google.code.gson:gson:2.8.0'
 }
