--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     //Gson
     compile 'com.google.code.gson:gson:2.8.0'
+    //mosby。MVP
+    compile 'com.hannesdorfmann.mosby:mvp:2.0.1'
+
 }
