--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fuicuiedu.xc.easyshop_20170206">
+
     <!-- 网络权限 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -20,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".user.login.LoginActivity" />
-        <activity android:name=".user.register.RegisterActivity"></activity>
+        <activity android:name=".user.register.RegisterActivity" />
+        <activity android:name=".main.me.personInfo.PersonActivity"></activity>
     </application>
 
 </manifest>
