--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
         <activity android:name=".user.login.LoginActivity" />
         <activity android:name=".user.register.RegisterActivity" />
-        <activity android:name=".main.me.personInfo.PersonActivity"></activity>
+        <activity android:name=".main.me.personInfo.PersonActivity" />
+        <activity android:name=".main.me.personInfo.NickNameActivity"></activity>
     </application>
 
 </manifest>
