--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile 'com.hannesdorfmann.mosby:mvp:2.0.1'
     //图片裁剪的库
     compile 'org.hybridsquad.android.photocropper:library:2.1.0'
+    //ImageLoader（用于图片加载）
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
 
 }
