--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     compile 'org.hybridsquad.android.photocropper:library:2.1.0'
     //ImageLoader（用于图片加载）
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    //上拉刷新，下载加载的库
+    compile 'in.srain.cube:ptr-load-more:1.0.2'
+    //recyclerview
+    compile 'jp.wasabeef:recyclerview-animators:2.2.3'
 
 
 }
