--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,6 @@
     <!-- 相机权限 -->
     <uses-permission android:name="android.permission.CAMERA" />
 
-
-
-
     <application
         android:name=".EasyShopApplication"
         android:allowBackup="true"
@@ -30,7 +27,8 @@
         <activity android:name=".user.login.LoginActivity" />
         <activity android:name=".user.register.RegisterActivity" />
         <activity android:name=".main.me.personInfo.PersonActivity" />
-        <activity android:name=".main.me.personInfo.NickNameActivity"></activity>
+        <activity android:name=".main.me.personInfo.NickNameActivity" />
+        <activity android:name=".main.shop.details.GoodsDetailActivity"></activity>
     </application>
 
 </manifest>
