我的商品页，Activity完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,9 @@
         <activity android:name=".user.register.RegisterActivity" />
         <activity android:name=".main.me.personInfo.PersonActivity" />
         <activity android:name=".main.me.personInfo.NickNameActivity" />
-        <activity android:name=".main.shop.details.GoodsDetailActivity"></activity>
-        <activity android:name=".main.shop.details.GoodsDetailInfoActivity"/>
+        <activity android:name=".main.shop.details.GoodsDetailActivity" />
+        <activity android:name=".main.shop.details.GoodsDetailInfoActivity" />
+        <activity android:name=".main.me.persongoods.PersonGoodsActivity"></activity>
     </application>
 
 </manifest>
