商品上传页，业务类实现

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     compile 'jp.wasabeef:recyclerview-animators:2.2.3'
     //使用开源库CircleIndicator来实现ViewPager的圆点指示器
     compile 'me.relex:circleindicator:1.2.1@aar'
+    //工具类
+    compile 'org.apache.commons:commons-lang3:3.4'
 
 
 
