商品上传页，图片展示页完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         <activity android:name=".main.shop.details.GoodsDetailActivity" />
         <activity android:name=".main.shop.details.GoodsDetailInfoActivity" />
         <activity android:name=".main.me.persongoods.PersonGoodsActivity" />
-        <activity android:name=".main.me.goodsupload.GoodsUpLoadActivity"></activity>
+        <activity android:name=".main.me.goodsupload.GoodsUpLoadActivity" />
+        <activity android:name=".main.me.goodsupload.GoodsUpLoadImageShowActivity"></activity>
     </application>
 
 </manifest>
