依赖环信模块01

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,13 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-
     //butterknife
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
@@ -52,7 +51,5 @@ dependencies {
     compile 'me.relex:circleindicator:1.2.1@aar'
     //工具类
     compile 'org.apache.commons:commons-lang3:3.4'
-
-
-
+    compile project(':apphx')
 }
